# test

7.13/: 4.cc
cmake_test/: CMakeLists.txt  tea_stu.cc
cmake_test/include/: teacherstudent2.h
cmake_test/lib1/: CMakeLists.txt  teacherstudent.cpp
